--- a/index.html
+++ b/index.html
@@ -410,6 +410,8 @@
 <p>Bootstrap</p>
 <p>所有都是异步</p>
 <hr>
+<p>更多：<br>实现针对函数的真正RPC<br>利用动态代理、注解等实现App层与RPC层之间的调用</p>
+<hr>
 <p><a href="https://github.com/peanutydf/edolphin-netframework" target="_blank" rel="external">源码</a></p>
 <p>Thanks~</p>
 
