--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ cond(yes, right)-&gt;c2
 cond(no)-&gt;sub1(left)-&gt;op1
 c2(yes)-&gt;io-&gt;e
 c2(no)-&gt;op2-&gt;e</div>
-<div class="sequence">Title:login flow
+<div class="sequence">Title:&#x4E2D;&#x6587;&#x6D4B;&#x8BD5;
 User-&gt;Browser: Open Browser
 Browser-&gt;App1Server:  www.appserver.com
 App1Server-&gt;Browser: not signin, redirect to cas server
