--- a/index.html
+++ b/index.html
@@ -274,8 +274,9 @@
 <p>而网络不通一般由以下原因导致</p>
 <ol>
 <li>域名解析失败。若域名为内网自己配置的域名，而服务器的hosts中未加入该域名，则由于dns解析失败导致重定向</li>
-<li>防火墙，当两个服务器部署在不同的机器上时，由于防火墙导致网络不通，导致重定向<br>。。。 或许还有很多网络不通的原因，根据各种情况自行检查</li>
+<li>防火墙，当两个服务器部署在不同的机器上时，由于防火墙导致网络不通，导致重定向</li>
 </ol>
+<p>。。。 或许还有很多网络不通的原因，根据各种情况自行检查</p>
 
       
     </div>
